# tape50

./: AAX.md  AUv2.md  README.md
my_plugins/: CMakeLists.txt
my_plugins/Tape50/: CMakeLists.txt
my_plugins/Tape50/image/: slider_background.html  slider_handle.html
my_plugins/Tape50/include/: buffer.h  constants.go  constants.h  controller.h  id.h  parameter.h  processor.h  version.h
my_plugins/Tape50/resource/: Info.plist  main.uidesc  plugin.rc
my_plugins/Tape50/source/: buffer.cpp  controller.cpp  factory.cpp  parameter.cpp  processor.cpp
my_plugins/Tape50aax/: CMakeLists.txt
my_plugins/Tape50aax/source/: aax.cpp
my_plugins/Tape50auv2/: CMakeLists.txt  audiounitconfig.h
